@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Config
 
 {{$NEXT}}
+          Added serialize method
 
 0.006     2011-11-26 01:09:07 Europe/Amsterdam
           Added a clone method
